--- a/SCSS練習/_dev/sass/style.scss
+++ b/SCSS練習/_dev/sass/style.scss
@@ -33,15 +33,102 @@ h2{
     padding: 0;
 }
 .icons{
-    width: 20%;
+    width: 25%;
     text-align: center;
     p{
-        text-align: center;;
+        text-align: center;
     }
     strong{
-        font-size: 18px;
+        font-size: 25px;
     }
 }
 .icon{
     margin: 0 auto;
 }
+.premium-plan{
+    width: 90%;
+    margin: 0 auto;
+}
+.main-title{
+    margin: 0 auto;
+    padding:60px 0 0 0;
+    text-align: center;
+}
+.sub-title{
+    font-size: 16px;
+    text-align: center;
+    margin: 0 auto;
+}
+.list-content{
+    margin-top: 30px;
+    width: 23%;
+    background: #fff;
+    border: solid 1px #333;
+    border-radius: 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+}
+.detail{
+   
+    strong{
+        font-size: 25px;
+    }
+    p{
+        padding:0 20px;
+        margin: 0 auto;
+        font-size: 20px;
+    }
+    
+}
+.detail-icon{
+    border-radius: 4px;
+    font-size: 14px;
+    padding: 4px 8px;
+    display: inline-block;
+    font-weight: 900;
+    margin: 20px 0 10px 20px;
+    background-color: rgb(46, 119, 208);
+    color: rgb(255, 255, 255);
+}
+hr{
+    margin-top: 24px;
+    margin-bottom: 24px;
+    border: 0;
+    border-top: 1px solid #EFEFEF;
+    width: 90%;
+    &.sep{
+        align-self: stretch;
+        border-color: rgb(204, 204, 204);
+    }
+}
+.point{
+    padding: 15px;
+    margin: 10px;
+    li{
+        font-size: 20px;
+    }
+}
+.btn{
+    text-align: center;
+
+    button{
+        color: #fff;
+        font-size: 16px;
+        background: #333;
+        border: none;
+        text-decoration: none;
+        padding: 20px 50px;
+        margin: 50px;
+        border-radius: 40px;
+        transition: ease;
+
+        &:hover{
+            background-color: rgb(83, 79, 79);
+            transform: scale(1.04);
+
+        }
+    }
+        
+    
+    
+}
+
