--- a/SCSS練習/css/style.css
+++ b/SCSS練習/css/style.css
@@ -37,7 +37,7 @@ h2 {
 }
 
 .icons {
-  width: 20%;
+  width: 25%;
   text-align: center;
 }
 
@@ -46,9 +46,99 @@ h2 {
 }
 
 .icons strong {
-  font-size: 18px;
+  font-size: 25px;
 }
 
 .icon {
   margin: 0 auto;
+}
+
+.premium-plan {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.main-title {
+  margin: 0 auto;
+  padding: 60px 0 0 0;
+  text-align: center;
+}
+
+.sub-title {
+  font-size: 16px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.list-content {
+  margin-top: 30px;
+  width: 23%;
+  background: #fff;
+  border: solid 1px #333;
+  border-radius: 20px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+}
+
+.detail strong {
+  font-size: 25px;
+}
+
+.detail p {
+  padding: 0 20px;
+  margin: 0 auto;
+  font-size: 20px;
+}
+
+.detail-icon {
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 4px 8px;
+  display: inline-block;
+  font-weight: 900;
+  margin: 20px 0 10px 20px;
+  background-color: #2e77d0;
+  color: white;
+}
+
+hr {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  border: 0;
+  border-top: 1px solid #EFEFEF;
+  width: 90%;
+}
+
+hr.sep {
+  align-self: stretch;
+  border-color: #cccccc;
+}
+
+.point {
+  padding: 15px;
+  margin: 10px;
+}
+
+.point li {
+  font-size: 20px;
+}
+
+.btn {
+  text-align: center;
+}
+
+.btn button {
+  color: #fff;
+  font-size: 16px;
+  background: #333;
+  border: none;
+  text-decoration: none;
+  padding: 20px 50px;
+  margin: 50px;
+  border-radius: 40px;
+  transition: ease;
+}
+
+.btn button:hover {
+  background-color: #534f4f;
+  transform: scale(1.04);
 }
