--- a/SCSS練習/_dev/sass/style.scss
+++ b/SCSS練習/_dev/sass/style.scss
@@ -22,7 +22,7 @@ h2{
     padding:50px;
 }
 .premium-nav{
-    width: 90%;
+    max-width:1400px;
     margin: 0 auto;
 }
 .premium-list{
@@ -46,7 +46,7 @@ h2{
     margin: 0 auto;
 }
 .premium-plan{
-    width: 90%;
+   max-width: 1400px;
     margin: 0 auto;
 }
 .main-title{
@@ -60,7 +60,9 @@ h2{
     margin: 0 auto;
 }
 .list-content{
+    list-style-type: none;
     margin-top: 30px;
+    padding: 10px;
     width: 23%;
     background: #fff;
     border: solid 1px #333;
@@ -69,8 +71,9 @@ h2{
 }
 .detail{
    
-    strong{
-        font-size: 25px;
+    span{
+        font-size: 30px;
+        font-weight: bold;
     }
     p{
         padding:0 20px;
@@ -89,16 +92,14 @@ h2{
     background-color: rgb(46, 119, 208);
     color: rgb(255, 255, 255);
 }
-hr{
-    margin-top: 24px;
-    margin-bottom: 24px;
+   
+.sep{
+    margin: 24px auto;
     border: 0;
     border-top: 1px solid #EFEFEF;
     width: 90%;
-    &.sep{
-        align-self: stretch;
-        border-color: rgb(204, 204, 204);
-    }
+    align-self: stretch;
+    border-color: rgb(204, 204, 204);
 }
 .point{
     padding: 15px;
@@ -116,8 +117,8 @@ hr{
         background: #333;
         border: none;
         text-decoration: none;
-        padding: 20px 50px;
-        margin: 50px;
+        padding: 15px 95px;
+        margin: 50px 0;
         border-radius: 40px;
         transition: ease;
 
@@ -127,8 +128,33 @@ hr{
 
         }
     }
-        
-    
-    
 }
+$mqPc: 1180px;
+$mqTab: 980px;
+$mqSp: 768px;
+@mixin mq($device) {
+    @if $device == sp {
+        @media only screen and (max-width: $mqSp) {
+            @content;
+        }
+    } @else if $device == tab {
+        @media only screen and (max-width: $mqTab) {
+            @content;
+        }
+    } @else if $device == pc {
+        @media only screen and (max-width: $mqPc) {
+            @content;
+        }
+    } @else {
+        @media screen and (max-width: $device){
+            @content;
+      }
+  }
+}
+p {
+    color: #333;
+    @include mq(sp) {
+     color: #fff;
+    }
+   }
 
