--- a/SCSS練習/css/style.css
+++ b/SCSS練習/css/style.css
@@ -56,6 +56,10 @@ h2 {
 .premium-plan {
   max-width: 1400px;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .main-title {
@@ -79,6 +83,16 @@ h2 {
   border: solid 1px #333;
   border-radius: 20px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  padding-bottom: 50px;
+}
+
+.list-content ul {
+  padding: 10px 10px 50px 10px;
+  margin: 0 auto;
+}
+
+.detail {
+  list-style-type: none;
 }
 
 .detail span {
@@ -98,7 +112,7 @@ h2 {
   padding: 4px 8px;
   display: inline-block;
   font-weight: 900;
-  margin: 20px 0 10px 20px;
+  margin: 10px 0 10px 20px;
   background-color: #2e77d0;
   color: white;
 }
@@ -125,7 +139,7 @@ h2 {
   text-align: center;
 }
 
-.btn button {
+.btn .button {
   color: #fff;
   font-size: 16px;
   background: #333;
@@ -137,7 +151,7 @@ h2 {
   transition: ease;
 }
 
-.btn button:hover {
+.btn .button:hover {
   background-color: #534f4f;
   transform: scale(1.04);
 }
