--- a/SCSS練習/css/mixin.css
+++ b/SCSS練習/css/mixin.css
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 980px) {
+  .premium-nav {
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
   .premium-list {
     max-width: 800px;
     display: flex;
@@ -11,8 +16,7 @@
     margin: 0 auto;
   }
   .icon {
-    margin: 20px;
-    width: auto;
+    margin: 30px 10px;
   }
   .premium-plan {
     max-width: 980px;
@@ -32,9 +36,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+  div {
+    padding: 0 20px;
+  }
   .premium-nav {
     max-width: 760px;
-    margin: 0 auto;
+    padding: 0;
   }
   .premium-list {
     display: unset;
@@ -57,7 +64,7 @@
     line-height: normal;
   }
   .icon {
-    margin: 30px 40px;
+    margin: 30px 10px;
     max-width: 100px;
     height: 100%;
   }
@@ -71,11 +78,11 @@
   .list-content {
     list-style-type: none;
     padding: 10px;
-    width: 60%;
+    width: 100%;
     margin: 60px auto;
     padding-bottom: 50px;
   }
   .btn .button {
-    padding: 15px 50px;
+    padding: 18px 90px;
   }
 }
