--- a/SCSS練習/_dev/sass/mixin.scss
+++ b/SCSS練習/_dev/sass/mixin.scss
@@ -126,7 +126,8 @@ $mqSp: 768px;
     }
     .btn{
         .button{
-            padding: 18px 90px;
+            padding: 18px;
+            display: block;
         }
     }
 }
